# pageant_assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  docker.yml  security.yml
apps/: streamlit_app.py
apps/pages/: 1_Coach.py  1_My_Profile.py
data/exemplars/: exemplar_library.json
data/personas/: d557e0078583.json
data/questions/: question_bank.json
src/pageant_assistant/config/: settings.py
src/pageant_assistant/exemplars/: library.py
src/pageant_assistant/graphs/: refiner.py
src/pageant_assistant/llm/: prompts.py  providers.py
src/pageant_assistant/personas/: manager.py  models.py
src/pageant_assistant/questions/: bank.py
src/pageant_assistant/rag/: nodes.py  prompts.py  seed.py  store.py
src/pageant_assistant/rubrics/: loader.py  miss_charm.json  miss_earth.json  miss_grand.json  miss_universe.json
src/pageant_assistant/schemas/: rubric.py  state.py
src/pageant_assistant/voice/: audio.py
tests/: conftest.py  test_config.py  test_exemplars.py  test_integration.py  test_personas.py  test_questions.py  test_rag_store.py  test_rubrics.py  test_schemas.py
